Fix baseURL for GitHub Pages

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-# baseURL: "https://github.com/Riv-rain/RR-blog"
+# baseURL: "https://riv-rain.github.io/RR-blog/"
 # languageCode: "zh-cn"
 # theme: "hugo-theme-stack"
 # title: "我的博客"
